# www.configurationiscode.com

./: .gitignore  Post-ideas.md  README.md  Test  _redirects  ciscweb.cabal  index.html  index.js  package-lock.json  package.json  stack.yaml
app/: SiteCompiler.hs  Test.hs
layouts/: blog.html  page.html
site/: _redirects
site/pages/: index.md
site/pages/about/: index.md
site/static/: site.css
site/template/: default.tmpl  post.jade
src/: _redirects  index.md  posts.md  site.css
src/2016/07/: first-post.md
src/CIsCweb/: Hello.hs  HelloTest.hs
src/author/: index.md
src/blog/: index.md
src/blog/2016/: first-post.md
src/blog/2017/: 0806-configuration-is-code.md
src/draft/: etckeeper.md
template/: blog-index.jade  post.jade
templates/: blog-index.jade  layout.jade  page.jade  post.jade
